--- a/tienda/src/main/resources/static/login.html
+++ b/tienda/src/main/resources/static/login.html
@@ -44,14 +44,14 @@
                                     <form class="user">
                                         <div class="form-group">
                                             <input type="email" class="form-control form-control-user"
-                                                id="exampleInputEmail" aria-describedby="emailHelp"
+                                                id="txtEmail" aria-describedby="emailHelp"
                                                 placeholder="ingrese tu email">
                                         </div>
                                         <div class="form-group">
                                             <input type="password" class="form-control form-control-user"
-                                                id="exampleInputPassword" placeholder="Password">
+                                                id="txtPassword" placeholder="Password">
                                         </div>
-                                        <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                        <a onclick="iniciarSecion()" href="#" class="btn btn-primary btn-user btn-block">
                                             iniciar secion
                                         </a>
                                     </form>
